# CryptoBit

./: .gitignore  README.md  database.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  db.sqlite3
backend/core/: settings.py  urls.py
backend/nftapi/: apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/nftapi/migrations/: 0001_initial.py  0002_alter_customuser_birth_date.py  0003_alter_customuser_birth_date.py  0004_alter_customuser_birth_date.py
client/: index.html  package-lock.json  package.json
client/src/: main.jsx
client/src/api/: api.js  axios.js
client/src/assets/styles/: index.scss
client/src/components/layout/: Layout.jsx  Layout.scss
client/src/components/ui/: Loader.jsx
client/src/data/: List.data.js
client/src/routes/: Router.jsx  routes.data.js
client/src/store/: listSlice.js  store.js  todoSlice.js
pgdata/: pg_hba.conf  postmaster.pid
pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2840_vm  2841  pg_internal.init
pgdata/base/16384/: 2619  pg_internal.init
pgdata/base/16385/: 112  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13397  13398  13398_fsm  13398_vm  13402  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  13412  16390  16391  16395  16396  16398  16399  16402  16404  16406  16407  16410  (+242 more)
pgdata/base/4/: 2619
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
(+22 files in other folders)
